--- a/service-auth.properties
+++ b/service-auth.properties
@@ -19,3 +19,6 @@ management.endpoint.health.show-details=always
 #springdoc.swagger-ui.enabled=true
 #springdoc.api-docs.path=/v3/api-docs
 #springdoc.swagger-ui.path=/swagger-ui.html
+
+springdoc.swagger-ui.path=/auth-service/swagger-ui.html
+springdoc.api-docs.path=/auth-service/v3/api-docs
