--- a/service-admin.properties
+++ b/service-admin.properties
@@ -18,3 +18,6 @@ spring.boot.admin.client.password=adm123
 spring.boot.admin.client.username=springAdmin
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+springdoc.swagger-ui.path=/admin-service/swagger-ui.html
+springdoc.api-docs.path=/admin-service/v3/api-docs
