--- a/service-contact.properties
+++ b/service-contact.properties
@@ -15,5 +15,5 @@ spring.boot.admin.client.username=springAdmin
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/SERVICE-CONTACT/swagger-ui.html
+springdoc.api-docs.path=/SERVICE-CONTACT/v3/api-docs
