--- a/service-contact.properties
+++ b/service-contact.properties
@@ -15,5 +15,8 @@ spring.boot.admin.client.username=springAdmin
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-springdoc.swagger-ui.path=/contact-service/swagger-ui.html
-springdoc.api-docs.path=/contact-service/v3/api-docs
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
