--- a/server-gateway.yml
+++ b/server-gateway.yml
@@ -60,18 +60,18 @@ management:
 springdoc:
   api-docs:
     enabled: true
-    path: /v3/api-docs
+    path: "/v3/api-docs"
     groups:
       enabled: true
   swagger-ui:
     enabled: true
-    path: /swagger-ui.html
+    path: "/swagger-ui.html"
     urls:
-     - name: Service User
-        url: /user-service/v3/api-docs
-     - name: Service Admin
-        url: /admin-service/v3/api-docs
-     - name: Service Contact
-        url: /contact-service/v3/api-docs
-     - name: Service Auth
-        url: /auth-service/v3/api-docs
+      - name: "Service User"
+        url: "/user-service/v3/api-docs"
+      - name: "Service Admin"
+        url: "/admin-service/v3/api-docs"
+      - name: "Service Contact"
+        url: "/contact-service/v3/api-docs"
+      - name: "Service Auth"
+        url: "/auth-service/v3/api-docs"
