--- a/service-admin.properties
+++ b/service-admin.properties
@@ -19,5 +19,8 @@ spring.boot.admin.client.username=springAdmin
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-springdoc.swagger-ui.path=/admin-service/swagger-ui.html
-springdoc.api-docs.path=/admin-service/v3/api-docs
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
