--- a/service-auth.properties
+++ b/service-auth.properties
@@ -15,10 +15,9 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #for swagger if required
-#springdoc.api-docs.enabled=true
-#springdoc.swagger-ui.enabled=true
-#springdoc.api-docs.path=/v3/api-docs
-#springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 
-springdoc.swagger-ui.path=/auth-service/swagger-ui.html
-springdoc.api-docs.path=/auth-service/v3/api-docs
+
